lib/ASTBuildingTurtleParser.js
// $ANTLR 3.3 Nov 30, 2010 12:50:56 ASTBuildingTurtle.g 2013-01-31 14:58:47

var ASTBuildingTurtleParser = function(input, state) {
    if (!state) {
        state = new org.antlr.runtime.RecognizerSharedState();
    }

    (function(){


          // We´re overriding both methods as we only want to 
          // accept syntactically correct turtle files. If those
          // contain any errors they should fix their files.

          this.mismatch = function(input, ttype, follow){
            ;
          }

          this.recoverFromMismatchedSet = function(input, e, follow){
            ;
          }

    }).call(this);

    ASTBuildingTurtleParser.superclass.constructor.call(this, input, state);

    this.dfa14 = new ASTBuildingTurtleParser.DFA14(this);
    this.dfa26 = new ASTBuildingTurtleParser.DFA26(this);

         

    /* @todo only create adaptor if output=AST */
    this.adaptor = new org.antlr.runtime.tree.CommonTreeAdaptor();

};

org.antlr.lang.augmentObject(ASTBuildingTurtleParser, {
    EOF: -1,
    DEF_EMPTY_BLANK: 4,
    DEF_TRIPLES: 5,
    DEF_COLLECTION: 6,
    DEF_BNPL: 7,
    WS: 8,
    DOT: 9,
    PREFIX: 10,
    PNAME_NS: 11,
    IRIREF: 12,
    BASE: 13,
    SEMI: 14,
    A: 15,
    COMMA: 16,
    PAREN_ROUND_OPEN: 17,
    PAREN_ROUND_CLOSE: 18,
    BLANK_NODE_LABEL: 19,
    PAREN_BRACKETS_OPEN: 20,
    PAREN_BRACKETS_CLOSE: 21,
    TRUE: 22,
    FALSE: 23,
    INTEGER: 24,
    DECIMAL: 25,
    DOUBLE: 26,
    LANGTAG: 27,
    EYES: 28,
    STRING_LITERAL_QUOTE: 29,
    STRING_LITERAL_SINGLE_QUOTE: 30,
    STRING_LITERAL_LONG_SINGLE_QUOTE: 31,
    STRING_LITERAL_LONG_QUOTE: 32,
    PNAME_LN: 33,
    UCHAR: 34,
    PN_PREFIX: 35,
    PN_LOCAL: 36,
    ECHAR: 37,
    PN_CHARS_U: 38,
    PN_CHARS: 39,
    EXPONENT: 40,
    COMMENT: 41,
    PLX: 42,
    PERCENT: 43,
    PN_LOCAL_ESC: 44,
    HEX: 45,
    PN_CHARS_BASE: 46
});

(function(){
// public class variables
var EOF= -1,
    DEF_EMPTY_BLANK= 4,
    DEF_TRIPLES= 5,
    DEF_COLLECTION= 6,
    DEF_BNPL= 7,
    WS= 8,
    DOT= 9,
    PREFIX= 10,
    PNAME_NS= 11,
    IRIREF= 12,
    BASE= 13,
    SEMI= 14,
    A= 15,
    COMMA= 16,
    PAREN_ROUND_OPEN= 17,
    PAREN_ROUND_CLOSE= 18,
    BLANK_NODE_LABEL= 19,
    PAREN_BRACKETS_OPEN= 20,
    PAREN_BRACKETS_CLOSE= 21,
    TRUE= 22,
    FALSE= 23,
    INTEGER= 24,
    DECIMAL= 25,
    DOUBLE= 26,
    LANGTAG= 27,
    EYES= 28,
    STRING_LITERAL_QUOTE= 29,
    STRING_LITERAL_SINGLE_QUOTE= 30,
    STRING_LITERAL_LONG_SINGLE_QUOTE= 31,
    STRING_LITERAL_LONG_QUOTE= 32,
    PNAME_LN= 33,
    UCHAR= 34,
    PN_PREFIX= 35,
    PN_LOCAL= 36,
    ECHAR= 37,
    PN_CHARS_U= 38,
    PN_CHARS= 39,
    EXPONENT= 40,
    COMMENT= 41,
    PLX= 42,
    PERCENT= 43,
    PN_LOCAL_ESC= 44,
    HEX= 45,
    PN_CHARS_BASE= 46;

// public instance methods/vars
org.antlr.lang.extend(ASTBuildingTurtleParser, org.antlr.runtime.Parser, {
        
    setTreeAdaptor: function(adaptor) {
        this.adaptor = adaptor;
    },
    getTreeAdaptor: function() {
        return this.adaptor;
    },

    getTokenNames: function() { return ASTBuildingTurtleParser.tokenNames; },
    getGrammarFileName: function() { return "ASTBuildingTurtle.g"; }
});
org.antlr.lang.augmentObject(ASTBuildingTurtleParser.prototype, {

    // inline static return class
    turtleDoc_return: (function() {
        ASTBuildingTurtleParser.turtleDoc_return = function(){};
        org.antlr.lang.extend(ASTBuildingTurtleParser.turtleDoc_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // ASTBuildingTurtle.g:67:1: turtleDoc : ( WS )* ( statement )* -> ( statement )* ;
    // $ANTLR start "turtleDoc"
    turtleDoc: function() {
        var retval = new ASTBuildingTurtleParser.turtleDoc_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var WS1 = null;
         var statement2 = null;

        var WS1_tree=null;
        var stream_WS=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token WS");
        var stream_statement=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule statement");
        try {
            // ASTBuildingTurtle.g:68:4: ( ( WS )* ( statement )* -> ( statement )* )
            // ASTBuildingTurtle.g:68:6: ( WS )* ( statement )*
            // ASTBuildingTurtle.g:68:6: ( WS )*
            loop1:
            do {
                var alt1=2;
                var LA1_0 = this.input.LA(1);

                if ( (LA1_0==WS) ) {
                    alt1=1;
                }


                switch (alt1) {
                case 1 :
                    // ASTBuildingTurtle.g:68:6: WS
                    WS1=this.match(this.input,WS,ASTBuildingTurtleParser.FOLLOW_WS_in_turtleDoc90);  
                    stream_WS.add(WS1);



                    break;

                default :
                    break loop1;
                }
            } while (true);

            // ASTBuildingTurtle.g:68:10: ( statement )*
            loop2:
            do {
                var alt2=2;
                var LA2_0 = this.input.LA(1);

                if ( ((LA2_0>=PREFIX && LA2_0<=BASE)||LA2_0==PAREN_ROUND_OPEN||(LA2_0>=BLANK_NODE_LABEL && LA2_0<=PAREN_BRACKETS_OPEN)||LA2_0==PNAME_LN) ) {
                    alt2=1;
                }


                switch (alt2) {
                case 1 :
                    // ASTBuildingTurtle.g:68:10: statement
                    this.pushFollow(ASTBuildingTurtleParser.FOLLOW_statement_in_turtleDoc93);
                    statement2=this.statement();

                    this.state._fsp--;

                    stream_statement.add(statement2.getTree());


                    break;

                default :
                    break loop2;
                }
            } while (true);



            // AST REWRITE
            // elements: statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 68:21: -> ( statement )*
            {
                // ASTBuildingTurtle.g:68:24: ( statement )*
                while ( stream_statement.hasNext() ) {
                    this.adaptor.addChild(root_0, stream_statement.nextTree());

                }
                stream_statement.reset();

            }

            retval.tree = root_0;


            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

          catch(ex) {
            throw ex;
          }
        finally {
        }
        return retval;
    },

    // inline static return class
    statement_return: (function() {
        ASTBuildingTurtleParser.statement_return = function(){};
        org.antlr.lang.extend(ASTBuildingTurtleParser.statement_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // ASTBuildingTurtle.g:71:1: statement : ( directive (ws1= WS )* dot= DOT (ws2= WS )* -> directive | triples ( WS )* DOT ( WS )* -> triples );
    // $ANTLR start "statement"
    statement: function() {
        var retval = new ASTBuildingTurtleParser.statement_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var ws1 = null;
        var dot = null;
        var ws2 = null;
        var WS5 = null;
        var DOT6 = null;
        var WS7 = null;
         var directive3 = null;
         var triples4 = null;

        var ws1_tree=null;
        var dot_tree=null;
        var ws2_tree=null;
        var WS5_tree=null;
        var DOT6_tree=null;
        var WS7_tree=null;
        var stream_WS=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token WS");
        var stream_DOT=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token DOT");
        var stream_triples=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule triples");
        var stream_directive=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule directive");
        try {
            // ASTBuildingTurtle.g:72:4: ( directive (ws1= WS )* dot= DOT (ws2= WS )* -> directive | triples ( WS )* DOT ( WS )* -> triples )
            var alt7=2;
            var LA7_0 = this.input.LA(1);

            if ( (LA7_0==PREFIX||LA7_0==BASE) ) {
                alt7=1;
            }
            else if ( ((LA7_0>=PNAME_NS && LA7_0<=IRIREF)||LA7_0==PAREN_ROUND_OPEN||(LA7_0>=BLANK_NODE_LABEL && LA7_0<=PAREN_BRACKETS_OPEN)||LA7_0==PNAME_LN) ) {
                alt7=2;
            }
            else {
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 7, 0, this.input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // ASTBuildingTurtle.g:72:6: directive (ws1= WS )* dot= DOT (ws2= WS )*
                    this.pushFollow(ASTBuildingTurtleParser.FOLLOW_directive_in_statement114);
                    directive3=this.directive();

                    this.state._fsp--;

                    stream_directive.add(directive3.getTree());
                    // ASTBuildingTurtle.g:72:19: (ws1= WS )*
                    loop3:
                    do {
                        var alt3=2;
                        var LA3_0 = this.input.LA(1);

                        if ( (LA3_0==WS) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                        case 1 :
                            // ASTBuildingTurtle.g:72:19: ws1= WS
                            ws1=this.match(this.input,WS,ASTBuildingTurtleParser.FOLLOW_WS_in_statement118);  
                            stream_WS.add(ws1);



                            break;

                        default :
                            break loop3;
                        }
                    } while (true);

                    dot=this.match(this.input,DOT,ASTBuildingTurtleParser.FOLLOW_DOT_in_statement123);  
                    stream_DOT.add(dot);

                    // ASTBuildingTurtle.g:72:35: (ws2= WS )*
                    loop4:
                    do {
                        var alt4=2;
                        var LA4_0 = this.input.LA(1);

                        if ( (LA4_0==WS) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                        case 1 :
                            // ASTBuildingTurtle.g:72:35: ws2= WS
                            ws2=this.match(this.input,WS,ASTBuildingTurtleParser.FOLLOW_WS_in_statement127);  
                            stream_WS.add(ws2);



                            break;

                        default :
                            break loop4;
                        }
                    } while (true);



                    // AST REWRITE
                    // elements: directive
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    retval.tree = root_0;
                    var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = this.adaptor.nil();
                    // 72:40: -> directive
                    {
                        this.adaptor.addChild(root_0, stream_directive.nextTree());

                    }

                    retval.tree = root_0;

                    break;
                case 2 :
                    // ASTBuildingTurtle.g:73:6: triples ( WS )* DOT ( WS )*
                    this.pushFollow(ASTBuildingTurtleParser.FOLLOW_triples_in_statement139);
                    triples4=this.triples();

                    this.state._fsp--;

                    stream_triples.add(triples4.getTree());
                    // ASTBuildingTurtle.g:73:14: ( WS )*
                    loop5:
                    do {
                        var alt5=2;
                        var LA5_0 = this.input.LA(1);

                        if ( (LA5_0==WS) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                        case 1 :
                            // ASTBuildingTurtle.g:73:14: WS
                            WS5=this.match(this.input,WS,ASTBuildingTurtleParser.FOLLOW_WS_in_statement141);  
                            stream_WS.add(WS5);



                            break;

                        default :
                            break loop5;
                        }
                    } while (true);

                    DOT6=this.match(this.input,DOT,ASTBuildingTurtleParser.FOLLOW_DOT_in_statement144);  
                    stream_DOT.add(DOT6);

                    // ASTBuildingTurtle.g:73:22: ( WS )*
                    loop6:
                    do {
                        var alt6=2;
                        var LA6_0 = this.input.LA(1);

                        if ( (LA6_0==WS) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                        case 1 :
                            // ASTBuildingTurtle.g:73:22: WS
                            WS7=this.match(this.input,WS,ASTBuildingTurtleParser.FOLLOW_WS_in_statement146);  
                            stream_WS.add(WS7);



                            break;

                        default :
                            break loop6;
                        }
                    } while (true);



                    // AST REWRITE
                    // elements: triples
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    retval.tree = root_0;
                    var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = this.adaptor.nil();
                    // 73:26: -> triples
                    {
                        this.adaptor.addChild(root_0, stream_triples.nextTree());

                    }

                    retval.tree = root_0;

                    break;

            }
            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

          catch(ex) {
            throw ex;
          }
        finally {
        }
        return retval;
    },

    // inline static return class
    directive_return: (function() {
        ASTBuildingTurtleParser.directive_return = function(){};
        org.antlr.lang.extend(ASTBuildingTurtleParser.directive_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // ASTBuildingTurtle.g:77:1: directive : ( prefixID | base );
    // $ANTLR start "directive"
    directive: function() {
        var retval = new ASTBuildingTurtleParser.directive_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

         var prefixID8 = null;
         var base9 = null;


        try {
            // ASTBuildingTurtle.g:78:4: ( prefixID | base )
            var alt8=2;
            var LA8_0 = this.input.LA(1);

            if ( (LA8_0==PREFIX) ) {
                alt8=1;
            }
            else if ( (LA8_0==BASE) ) {
                alt8=2;
            }
            else {
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 8, 0, this.input);

                throw nvae;
            }
            switch (alt8) {
                case 1 :
                    // ASTBuildingTurtle.g:78:6: prefixID
                    root_0 = this.adaptor.nil();

                    this.pushFollow(ASTBuildingTurtleParser.FOLLOW_prefixID_in_directive167);
                    prefixID8=this.prefixID();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, prefixID8.getTree());


                    break;
                case 2 :
                    // ASTBuildingTurtle.g:79:6: base
                    root_0 = this.adaptor.nil();

                    this.pushFollow(ASTBuildingTurtleParser.FOLLOW_base_in_directive174);
                    base9=this.base();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, base9.getTree());


                    break;

            }
            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

          catch(ex) {
            throw ex;
          }
        finally {
        }
        return retval;
    },

    // inline static return class
    prefixID_return: (function() {
        ASTBuildingTurtleParser.prefixID_return = function(){};
        org.antlr.lang.extend(ASTBuildingTurtleParser.prefixID_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // ASTBuildingTurtle.g:82:1: prefixID : prefix= PREFIX (ws1= WS )+ namens= PNAME_NS (ws2= WS )* iriref= IRIREF -> ^( PREFIX PNAME_NS IRIREF ) ;
    // $ANTLR start "prefixID"
    prefixID: function() {
        var retval = new ASTBuildingTurtleParser.prefixID_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var prefix = null;
        var ws1 = null;
        var namens = null;
        var ws2 = null;
        var iriref = null;

        var prefix_tree=null;
        var ws1_tree=null;
        var namens_tree=null;
        var ws2_tree=null;
        var iriref_tree=null;
        var stream_PREFIX=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token PREFIX");
        var stream_PNAME_NS=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token PNAME_NS");
        var stream_WS=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token WS");
        var stream_IRIREF=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token IRIREF");

        try {
            // ASTBuildingTurtle.g:83:4: (prefix= PREFIX (ws1= WS )+ namens= PNAME_NS (ws2= WS )* iriref= IRIREF -> ^( PREFIX PNAME_NS IRIREF ) )
            // ASTBuildingTurtle.g:83:6: prefix= PREFIX (ws1= WS )+ namens= PNAME_NS (ws2= WS )* iriref= IRIREF
            prefix=this.match(this.input,PREFIX,ASTBuildingTurtleParser.FOLLOW_PREFIX_in_prefixID191);  
            stream_PREFIX.add(prefix);

            // ASTBuildingTurtle.g:83:23: (ws1= WS )+
            var cnt9=0;
            loop9:
            do {
                var alt9=2;
                var LA9_0 = this.input.LA(1);

                if ( (LA9_0==WS) ) {
                    alt9=1;
                }


                switch (alt9) {
                case 1 :
                    // ASTBuildingTurtle.g:83:23: ws1= WS
                    ws1=this.match(this.input,WS,ASTBuildingTurtleParser.FOLLOW_WS_in_prefixID195);  
                    stream_WS.add(ws1);



                    break;

                default :
                    if ( cnt9 >= 1 ) {
                        break loop9;
                    }
                        var eee = new org.antlr.runtime.EarlyExitException(9, this.input);
                        throw eee;
                }
                cnt9++;
            } while (true);

            namens=this.match(this.input,PNAME_NS,ASTBuildingTurtleParser.FOLLOW_PNAME_NS_in_prefixID200);  
            stream_PNAME_NS.add(namens);

            // ASTBuildingTurtle.g:83:47: (ws2= WS )*
            loop10:
            do {
                var alt10=2;
                var LA10_0 = this.input.LA(1);

                if ( (LA10_0==WS) ) {
                    alt10=1;
                }


                switch (alt10) {
                case 1 :
                    // ASTBuildingTurtle.g:83:47: ws2= WS
                    ws2=this.match(this.input,WS,ASTBuildingTurtleParser.FOLLOW_WS_in_prefixID204);  
                    stream_WS.add(ws2);



                    break;

                default :
                    break loop10;
                }
            } while (true);

            iriref=this.match(this.input,IRIREF,ASTBuildingTurtleParser.FOLLOW_IRIREF_in_prefixID209);  
            stream_IRIREF.add(iriref);



            // AST REWRITE
            // elements: PNAME_NS, PREFIX, IRIREF
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 83:66: -> ^( PREFIX PNAME_NS IRIREF )
            {
                // ASTBuildingTurtle.g:83:69: ^( PREFIX PNAME_NS IRIREF )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(stream_PREFIX.nextNode(), root_1);

                this.adaptor.addChild(root_1, stream_PNAME_NS.nextNode());
                this.adaptor.addChild(root_1, stream_IRIREF.nextNode());

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;


            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

          catch(ex) {
            throw ex;
          }
        finally {
        }
        return retval;
    },

    // inline static return class
    base_return: (function() {
        ASTBuildingTurtleParser.base_return = function(){};
        org.antlr.lang.extend(ASTBuildingTurtleParser.base_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // ASTBuildingTurtle.g:86:1: base : base1= BASE (ws= WS )* iriref= IRIREF -> ^( BASE IRIREF ) ;
    // $ANTLR start "base"
    base: function() {
        var retval = new ASTBuildingTurtleParser.base_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var base1 = null;
        var ws = null;
        var iriref = null;

        var base1_tree=null;
        var ws_tree=null;
        var iriref_tree=null;
        var stream_BASE=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token BASE");
        var stream_WS=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token WS");
        var stream_IRIREF=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token IRIREF");

        try {
            // ASTBuildingTurtle.g:87:4: (base1= BASE (ws= WS )* iriref= IRIREF -> ^( BASE IRIREF ) )
            // ASTBuildingTurtle.g:87:6: base1= BASE (ws= WS )* iriref= IRIREF
            base1=this.match(this.input,BASE,ASTBuildingTurtleParser.FOLLOW_BASE_in_base236);  
            stream_BASE.add(base1);

            // ASTBuildingTurtle.g:87:19: (ws= WS )*
            loop11:
            do {
                var alt11=2;
                var LA11_0 = this.input.LA(1);

                if ( (LA11_0==WS) ) {
                    alt11=1;
                }


                switch (alt11) {
                case 1 :
                    // ASTBuildingTurtle.g:87:19: ws= WS
                    ws=this.match(this.input,WS,ASTBuildingTurtleParser.FOLLOW_WS_in_base240);  
                    stream_WS.add(ws);



                    break;

                default :
                    break loop11;
                }
            } while (true);

            iriref=this.match(this.input,IRIREF,ASTBuildingTurtleParser.FOLLOW_IRIREF_in_base245);  
            stream_IRIREF.add(iriref);



            // AST REWRITE
            // elements: IRIREF, BASE
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 87:38: -> ^( BASE IRIREF )
            {
                // ASTBuildingTurtle.g:87:41: ^( BASE IRIREF )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(stream_BASE.nextNode(), root_1);

                this.adaptor.addChild(root_1, stream_IRIREF.nextNode());

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;


            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

          catch(ex) {
            throw ex;
          }
        finally {
        }
        return retval;
    },

    // inline static return class
    triples_return: (function() {
        ASTBuildingTurtleParser.triples_return = function(){};
        org.antlr.lang.extend(ASTBuildingTurtleParser.triples_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // ASTBuildingTurtle.g:90:1: triples : ( subject ( WS )* predicateObjectList -> ^( DEF_TRIPLES subject ( predicateObjectList )+ ) | blankNodePropertyList ( predicateObjectList )? -> ^( DEF_TRIPLES blankNodePropertyList ( predicateObjectList )? ) );
    // $ANTLR start "triples"
    triples: function() {
        var retval = new ASTBuildingTurtleParser.triples_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var WS11 = null;
         var subject10 = null;
         var predicateObjectList12 = null;
         var blankNodePropertyList13 = null;
         var predicateObjectList14 = null;
